--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,3 +23,5 @@
 
 @import './apps/mail/cmps/MailList.css';
 @import './apps/mail/cmps/MailPreview.css';
+@import './apps/mail/cmps/ComposeMail.css';
+@import './apps/mail/cmps/mailNav.css';
