--- a/assets/css/apps/note/cmps/NotePreview.css
+++ b/assets/css/apps/note/cmps/NotePreview.css
@@ -1,26 +1,35 @@
 .note {
+  display: inline-block;
   border-radius: 8px;
   margin-block-end: 16px;
+  line-height: 1.5rem;
   border: 1px solid rgb(224, 224, 224);
-  color: var(--clr-note-txt);
+  color: var(--clr-txt-base);
   font-family: 'google-sans-regular';
+  break-inside: avoid;
+  word-wrap: break-word;
+  cursor: default;
+}
 
-  h2 {
-    font-size: 1rem;
-    font-family: 'google-sans-medium';
-    font-weight: 500;
-    padding: .75rem 1rem 0;
-    color: var(--clr-note-txt);
-  }
+.note h2 {
+  font-size: 1rem;
+  font-family: 'google-sans-medium';
+  font-weight: 500;
+  padding: 0.75rem 1rem 0;
+  color: var(--clr-txt-base);
+  letter-spacing: .00625em;
+  min-height: 26px;
+}
 
-  p {
-    font-size: .875rem;
-    padding: .75rem 1rem;
-    margin: 0;
-  }
+.note p {
+  font-size: 1.125rem;
+  padding: 0.75rem 1rem;
+  margin: 0;
+  letter-spacing: 0;
+  min-height: 30px;
+}
 
-  img {
-    border-top-right-radius: inherit;
-    border-top-left-radius: inherit;
-  }
+.note img {
+  border-top-right-radius: inherit;
+  border-top-left-radius: inherit;
 }
