--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,7 @@
 @import './apps/mail/cmps/MailPreview.css';
 @import './apps/mail/cmps/ComposeMail.css';
 @import './apps/mail/cmps/mailNav.css';
+@import './apps/mail/cmps/mailDetails.css';
 
 @import url(./apps/note/cmps/NoteList.css);
 @import url(./apps/note/cmps/NotePreview.css);
