Basic add note input styling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,3 +32,4 @@
 @import url(./apps/note/cmps/NoteList.css);
 @import url(./apps/note/cmps/NotePreview.css);
 @import url(./apps/note/cmps/NoteButtons.css);
+@import url(./apps/note/cmps/AddNote.css);
