--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -1,10 +1,3 @@
-.mail-list-container{
-    border-radius: 15px;
-    padding: 10px;
-    background-color: white;
-    width: 100%;
-}
-
 .mail-list {
     border-collapse: collapse;
     width: 100%;
@@ -14,11 +7,13 @@
 .mail-list td {
     border-top: 1.2px solid #d6daee;
     padding: 10px;
+    position: relative;
 }
 
 .mail-list td:last-child {
-    width: 60px;
     text-align: end;
+    white-space: nowrap;
+    overflow: hidden;
 }
     
 .mail-list tr:last-child td {
@@ -29,12 +24,62 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+/* .mail-list tr:hover .mail-list td:last-child {
+    width: 100px;
+} */
+
 .mail-list tr:hover td:last-child {
     border-right: 1.2px solid #d6daee;
+    padding: 0;
+    width: auto;
+    min-width: 100px;
 }
 
 .mail-list tr:hover td:first-child {
     border-left: 1.2px solid #d6daee;
+}
+
+.mail-list td .date {
+    display: inline;
+}
+
+.mail-list tr:hover td .date {
+    display: none;
+}
+
+.mail-list td .actions {
+    display: none;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
+
+.mail-list td .actions img {
+    height: 19px;
+    width: 19px;
+    margin: 0;
+}
+
+.mail-list td .actions button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+
+.mail-list td .actions button:hover {
+    background: #f1f3f4;
+}
+
+.mail-list tr:hover td .actions {
+    display: inline;
 }
 
  
