--- a/assets/css/setup/typography.css
+++ b/assets/css/setup/typography.css
@@ -22,3 +22,8 @@
   font-family: google-sans-medium;
   src: url('/assets/fonts/GoogleSans-Medium.ttf');
 }
+
+@font-face {
+  font-family: roboto-regular;
+  src: url('/assets/fonts/Roboto-Regular.ttf');
+}
