--- a/assets/css/apps/mail/cmps/mailDetails.css
+++ b/assets/css/apps/mail/cmps/mailDetails.css
@@ -1,4 +1,5 @@
 .mail-content {
+    align-items: center;
     grid-template-columns: 48px 1fr;
     grid-template-rows: auto 1fr auto;
     grid-template-areas:
@@ -34,6 +35,10 @@
     width: 20px;
 }
 
+.avatar {
+    justify-self: center;
+}
+
 .mail-details button:hover {
     background: #f1f3f4;
 
@@ -64,6 +69,7 @@
 
 .mail-subject h1 {
     font-size: 22px;
+    font-weight: normal;
 }
 
 .mail-recipients p {
