--- a/assets/css/apps/note/cmps/AddNote.css
+++ b/assets/css/apps/note/cmps/AddNote.css
@@ -1,11 +1,17 @@
 .add-note-container {
+  grid-column: 2;
+
+  width: 100%;
   max-width: 600px;
+  min-height: 46px;
+
   margin: auto;
   margin-block: 2rem;
-  min-height: 46px;
+
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 2px 6px 2px rgba(60, 64, 67, 0.15);
   border: 1px solid var(--clr-input-border);
   border-radius: .5rem;
+
   overflow: hidden;
 }
 
@@ -24,27 +30,29 @@
 }
 
 .add-note-container .input-content {
-  font-family: 'roboto-regular';
   padding: .75rem 1rem;
-  letter-spacing: .0142857143em;
+
+  font-family: 'roboto-regular';
   font-size: .875rem;
   line-height: 1.25rem;
+  letter-spacing: .0142857143em;
 }
 
 .add-note-container .input-title {
-  font-family: 'google-sans-medium';
   padding: .625rem 0.9375rem;
-  letter-spacing: .00625em;
+
+  font-family: 'google-sans-medium';
   font-size: 1rem;
   line-height: 1.5rem;
+  letter-spacing: .00625em;
 }
 
 .input-content::placeholder {
   color: var(--clr-txt-placeholder);
   font-family: 'google-sans-medium';
-  letter-spacing: 0.00625rem;
-  line-height: 1.5rem;
   font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.00625rem;
 }
 
 .input-content.expanded::placeholder {
@@ -54,19 +62,22 @@
 .add-note-input-btns {
   display: flex;
   gap: 6px;
+  
   position: absolute;
   right: .75rem;
   top: 0;
+
   min-height: 50px;
 }
 
 .add-note-input-btns button {
   width: 48px;
   height: 48px;
+  
   color: var(--clr-input-icons);
 }
 
-.action-buttons{
+.action-buttons {
   margin-block: .375rem;
   padding-inline: .625rem;
 }
