--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,3 +33,4 @@
 @import url(./apps/note/cmps/NotePreview.css);
 @import url(./apps/note/cmps/NoteButtons.css);
 @import url(./apps/note/cmps/AddNote.css);
+@import url(./apps/note/cmps/SideBar.css);
