--- a/assets/css/apps/note/cmps/SideBar.css
+++ b/assets/css/apps/note/cmps/SideBar.css
@@ -1,5 +1,32 @@
 .side-bar {
   grid-column: 1;
+  grid-row: 1/-1;
   width: 100%;
   height: 100%;
+
+  margin-inline-start: .625rem;
+  margin-block-start: .375rem;
+}
+
+.side-bar-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 3rem;
+  height: 3rem;
+
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
+  color: var(--clr-sb-icon);
+}
+
+.side-bar-icon:hover {
+  background-color: var(--clr-sb-hover);
+}
+
+.side-bar-icon.selected {
+  color: var(--clr-sb-icon-selected);
+  background-color: var(--clr-sb-selected);
 }
