--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,3 +34,4 @@
 @import url(./apps/note/cmps/NoteButtons.css);
 @import url(./apps/note/cmps/AddNote.css);
 @import url(./apps/note/cmps/SideBar.css);
+@import url(./apps/note/cmps/NoteTodos.css);
