--- a/assets/css/apps/note/cmps/NoteTodos.css
+++ b/assets/css/apps/note/cmps/NoteTodos.css
@@ -2,3 +2,9 @@
   list-style: none;
   padding: 0;
 }
+
+.done {
+  text-decoration: line-through;
+  font-size: .875rem;
+  color: var(--clr-todo-done);
+}
