Support change note color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,3 +35,4 @@
 @import url(./apps/note/cmps/AddNote.css);
 @import url(./apps/note/cmps/SideBar.css);
 @import url(./apps/note/cmps/NoteTodos.css);
+@import url(./apps/note/cmps/ColorPicker.css);
