--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,7 @@
 @import './apps/mail/cmps/ComposeMail.css';
 @import './apps/mail/cmps/mailNav.css';
 @import './apps/mail/cmps/mailDetails.css';
+@import './apps/mail/cmps/mailFilter.css';
 
 
 /* NOTES */
