--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -1,3 +1,9 @@
+.mail-list-details-container {
+    height: 100%;
+    overflow-y: auto;
+
+}
+
 .mail-list {
     border-collapse: collapse;
     width: 100%;
@@ -14,6 +20,10 @@
     text-align: end;
     white-space: nowrap;
     overflow: hidden;
+}
+
+.mail-list td:first-child {
+    padding-inline-start: 10px;
 }
     
 .mail-list tr:last-child td {
