--- a/assets/css/setup/typography.css
+++ b/assets/css/setup/typography.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: 'Product Sans Medium';
-  src: url('/assets/fonts/ProductSans-Medium.ttf');
+  src: url('../../fonts/ProductSans-Medium.ttf');
 }
 
 @font-face {
@@ -15,15 +15,15 @@
 
 @font-face {
   font-family: google-sans-regular;
-  src: url('/assets/fonts/GoogleSans-Regular.ttf');
+  src: url('../../fonts/GoogleSans-Regular.ttf');
 }
 
 @font-face {
   font-family: google-sans-medium;
-  src: url('/assets/fonts/GoogleSans-Medium.ttf');
+  src: url('../../fonts/GoogleSans-Medium.ttf');
 }
 
 @font-face {
   font-family: roboto-regular;
-  src: url('/assets/fonts/Roboto-Regular.ttf');
+  src: url('../../fonts/Roboto-Regular.ttf');
 }
