--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,7 @@
 
 @import './cmps/UserMsg.css';
 @import './cmps/AppHeader.css';
+@import './cmps/Loader.css';
 
 @import './apps/mail/cmps/MailList.css';
 @import './apps/mail/cmps/MailPreview.css';
