--- a/assets/css/apps/mail/cmps/mailFilter.css
+++ b/assets/css/apps/mail/cmps/mailFilter.css
@@ -43,6 +43,7 @@
     width: 470px;
     height: 48px;
     margin: 10px;
+    padding-inline-start: 10px;
 }
 
 .search-bar input {
@@ -57,6 +58,13 @@
     display: flex;
     border: 1px solid #d6daee;
     padding: 2px 8px;
+    cursor: pointer;
+    font-size: 1rem;
+    height: 20px;
+}
+
+.other-filter-btn.active {
+    background: rgb(237, 237, 237);
 }
 
 .other-filter form {
