Add search bar design

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,3 +39,4 @@
 @import url(./apps/note/cmps/SideBar.css);
 @import url(./apps/note/cmps/NoteTodos.css);
 @import url(./apps/note/cmps/ColorPicker.css);
+@import url(./apps/note/cmps/Header.css);
