--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -1,7 +1,6 @@
 .mail-list-details-container {
-    height: 100%;
-    overflow-y: auto;
-
+    height: 100%; 
+    /* overflow-y: auto; */
 }
 
 .mail-list {
@@ -14,16 +13,22 @@
     border-top: 1.2px solid #d6daee;
     padding: 10px;
     position: relative;
+    /* white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; */
 }
 
 .mail-list td:last-child {
     text-align: end;
-    white-space: nowrap;
-    overflow: hidden;
+    width: 70px;
+
 }
 
 .mail-list td:first-child {
     padding-inline-start: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
     
 .mail-list tr:last-child td {
@@ -41,7 +46,8 @@
 .mail-list tr:hover td:last-child {
     border-right: 1.2px solid #d6daee;
     padding: 0;
-    width: auto;
+    width: 70px;
+    /* width: auto; */
     min-width: 100px;
 }
 
