Fix home page photo size

--- a/assets/css/pages/Home.css
+++ b/assets/css/pages/Home.css
@@ -1,1 +1,12 @@
  /* home */
+ 
+ .home{
+  padding-block: 1rem;
+ }
+
+ .home .img-container{
+  max-width: 600px;
+  width: 80%;
+  border-radius: 1rem;
+  overflow: clip;
+ }
